css/site.css
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

html {
  height: 100vh;
}
body {
  color: #5a5a5a;
  height: 100%;
}
* {
  margin: 0;
}
.page-wrap {
  min-height: 100%;
  /* margin top+bottom equal to footer height */
  margin-bottom: -40px; 
  margin-top: -50px;
  padding-top: 30px;
}
.page-wrap:after {
  content: "";
  display: block;
}
.site-footer, .page-wrap:after {
  height: 90px; 
}
.related-posts .section-title {
  position: relative;
  margin-top: 4rem;
  margin-bottom: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-size: 1.563em;
}

.related-posts .section-title h3 {
  margin-top: 0px;
  margin-bottom: 20px;
}

.related-posts .section-title:before {
  position: absolute;
  top: -.5em;
  width: 3em;
  height: .25em;
  background-color: #d7d8da;
  content: "";
}


div.js-comments {
  margin-bottom: 3em;
}

div.entry-comments {
  margin-top: 40px;
}

td.code {
  width: 100%;
}

img.zoom {
  width: 100% !important;
  margin-bottom: 2em !important;
}

.entry-comments .section-title {
  position: relative;
  margin-top: 2rem;
  margin-bottom: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-size: 1.563em;
}

.entry-comments .section-title h3 {
  margin-top: 0px;
  margin-bottom: 22px;
}

.entry-comments .section-title:before {
  position: absolute;
  top: -.5em;
  width: 3em;
  height: .25em;
  background-color: #d7d8da;
  content: "";
}

/* GLOBAL CHANGES
-------------------------------------------------- */
.pull-right {
  margin-left: 10px;
  margin-top: 5px !important;
}

.pull-left {
  margin-right: 10px;
  margin-top: 5px !important;
}

/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */

/* Special class on .container surrounding .navbar, used for positioning it into place. */
.navbar-wrapper {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 20;
}

/* Flip around the padding for proper display in narrow viewports */
.navbar-wrapper > .container {
  padding-right: 0;
  padding-left: 0;
}
.navbar-wrapper .navbar {
  padding-right: 15px;
  padding-left: 15px;
}
.navbar-wrapper .navbar .container {
  width: auto;
}


/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  height: 320px;
  margin-bottom: 60px;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 320px;
  background-color: #0000CC;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 500px;
}


/* MARKETING CONTENT
-------------------------------------------------- */

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  margin-bottom: 20px;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
}
.marketing .col-lg-4 p {
  margin-right: 10px;
  margin-left: 10px;
}


/* Featurettes
------------------------- */

.featurette-divider {
  margin: 80px 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
}

img.img-thumbnail {
  width: 320px;
}

/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 768px) {
  /* Navbar positioning foo */
  .navbar-wrapper {
    margin-top: 20px;
  }
  .navbar-wrapper .container {
    padding-right: 15px;
    padding-left: 15px;
  }
  .navbar-wrapper .navbar {
    padding-right: 0;
    padding-left: 0;
  }

  /* The navbar becomes detached from the top, so we round the corners */
  .navbar-wrapper .navbar {
    border-radius: 4px;
  }

  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 20px;
    font-size: 21px;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }
}

@media only screen and (max-width : 480px) {
  img.img-thumbnail {
    width: 100%;
    margin-bottom: 20px;
    margin-right: 0px;
    margin-left: 0px;
  }
}

